[administration]: add fernape@, tz@ to ports-secteam@
Discussed with ports-secteam@ in mail list.

--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -100,9 +100,11 @@ The https://www.freebsd.org/portmgr/charter/[portmgr team charter] describes the
 The primary responsibility of the FreeBSD Port Security Team is to provide rapid response to security incidents that affects the FreeBSD ports collection and protect the FreeBSD user community by keeping the community informed of bugs, exploits, popular attacks, and other risks.
 More details are available on the https://wiki.freebsd.org/PortsSecteam[Wiki page].
 
+* {fernape}
 * {fluffy}
 * {joneum}
 * {riggs}
+* {tz}
 
 '''
 
