always use HTTPS links

--- a/documentation/content/en/articles/committers-guide/_index.po
+++ b/documentation/content/en/articles/committers-guide/_index.po
@@ -246,7 +246,7 @@ msgid ""
 "Messages carrying important information like public SSH keys can be signed "
 "with the OpenPGP key to prove that they are really from the committer.  See "
 "https://nostarch.com/releases/pgp_release.pdf[PGP & GPG: Email for the "
-"Practical Paranoid by Michael Lucas] and http://en.wikipedia.org/wiki/"
+"Practical Paranoid by Michael Lucas] and https://en.wikipedia.org/wiki/"
 "Pretty_Good_Privacy[] for more information."
 msgstr ""
 
