--- a/documentation/content/en/books/handbook/disks/_index.adoc
+++ b/documentation/content/en/books/handbook/disks/_index.adoc
@@ -82,7 +82,7 @@ Inspect [.filename]#/var/run/dmesg.boot# to ensure the new disk was found.
 In this example, the newly added SATA drive will appear as [.filename]#ada1#.
 
 For this example, a single large partition will be created on the new disk.
-The http://en.wikipedia.org/wiki/GUID_Partition_Table[GPT] partitioning scheme will be used in preference to the older and less versatile MBR scheme.
+The https://en.wikipedia.org/wiki/GUID_Partition_Table[GPT] partitioning scheme will be used in preference to the older and less versatile MBR scheme.
 
 [NOTE]
 ====
@@ -166,7 +166,7 @@ List the partitions on the disk to see the current configuration:
 
 [NOTE]
 ====
-If the disk was formatted with the http://en.wikipedia.org/wiki/GUID_Partition_Table[GPT] partitioning scheme, it may show as "corrupted" because the GPT backup partition table is no longer at the end of the drive.
+If the disk was formatted with the https://en.wikipedia.org/wiki/GUID_Partition_Table[GPT] partitioning scheme, it may show as "corrupted" because the GPT backup partition table is no longer at the end of the drive.
 Fix the backup partition table with `gpart`:
 
 [source,shell]
