--- a/documentation/content/en/books/handbook/disks/_index.po
+++ b/documentation/content/en/books/handbook/disks/_index.po
@@ -147,7 +147,7 @@ msgstr ""
 #: documentation/content/en/books/handbook/disks/_index.adoc:86
 msgid ""
 "For this example, a single large partition will be created on the new disk.  "
-"The http://en.wikipedia.org/wiki/GUID_Partition_Table[GPT] partitioning "
+"The https://en.wikipedia.org/wiki/GUID_Partition_Table[GPT] partitioning "
 "scheme will be used in preference to the older and less versatile MBR scheme."
 msgstr ""
 
@@ -290,7 +290,7 @@ msgstr ""
 #. type: delimited block = 4
 #: documentation/content/en/books/handbook/disks/_index.adoc:171
 msgid ""
-"If the disk was formatted with the http://en.wikipedia.org/wiki/"
+"If the disk was formatted with the https://en.wikipedia.org/wiki/"
 "GUID_Partition_Table[GPT] partitioning scheme, it may show as \"corrupted\" "
 "because the GPT backup partition table is no longer at the end of the "
 "drive.  Fix the backup partition table with `gpart`:"
