--- a/documentation/content/en/books/handbook/firewalls/_index.po
+++ b/documentation/content/en/books/handbook/firewalls/_index.po
@@ -183,8 +183,8 @@ msgstr ""
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:103
 msgid ""
 "To lookup unknown port numbers, refer to [.filename]#/etc/services#.  "
-"Alternatively, visit http://en.wikipedia.org/wiki/"
-"List_of_TCP_and_UDP_port_numbers[http://en.wikipedia.org/wiki/"
+"Alternatively, visit https://en.wikipedia.org/wiki/"
+"List_of_TCP_and_UDP_port_numbers[https://en.wikipedia.org/wiki/"
 "List_of_TCP_and_UDP_port_numbers] and do a port number lookup to find the "
 "purpose of a particular port number."
 msgstr ""
