--- a/documentation/content/en/books/handbook/virtualization/_index.po
+++ b/documentation/content/en/books/handbook/virtualization/_index.po
@@ -2964,7 +2964,7 @@ msgid ""
 "To run the Xen(TM) hypervisor on a host, certain hardware functionality is "
 "required.  Hardware virtualized domains require Extended Page Table (http://"
 "en.wikipedia.org/wiki/Extended_Page_Table[EPT]) and Input/Output Memory "
-"Management Unit (http://en.wikipedia.org/wiki/List_of_IOMMU-"
+"Management Unit (https://en.wikipedia.org/wiki/List_of_IOMMU-"
 "supporting_hardware[IOMMU]) support in the host processor."
 msgstr ""
 
