--- a/documentation/content/en/books/handbook/virtualization/_index.adoc
+++ b/documentation/content/en/books/handbook/virtualization/_index.adoc
@@ -1482,7 +1482,7 @@ Note that not all features are supported on FreeBSD yet.
 === Hardware Requirements for Xen(TM) Dom0
 
 To run the Xen(TM) hypervisor on a host, certain hardware functionality is required.
-Hardware virtualized domains require Extended Page Table (http://en.wikipedia.org/wiki/Extended_Page_Table[EPT]) and Input/Output Memory Management Unit (http://en.wikipedia.org/wiki/List_of_IOMMU-supporting_hardware[IOMMU]) support in the host processor.
+Hardware virtualized domains require Extended Page Table (https://en.wikipedia.org/wiki/Extended_Page_Table[EPT]) and Input/Output Memory Management Unit (https://en.wikipedia.org/wiki/List_of_IOMMU-supporting_hardware[IOMMU]) support in the host processor.
 
 [NOTE]
 ====
