Remove out of date info
Remove a reference that is over a decade out of date.

--- a/documentation/content/en/books/arch-handbook/driverbasics/_index.po
+++ b/documentation/content/en/books/arch-handbook/driverbasics/_index.po
@@ -629,6 +629,5 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/arch-handbook/driverbasics/_index.adoc:346
 msgid ""
-"For more information see ifnet(9), the source of the loopback device, and "
-"Bill Paul's network drivers."
+"For more information see ifnet(9) and the source of the loopback device."
 msgstr ""
