[documentation][articles]: Fix copy-paste error
In building-products article.

Reported by:	pauamma@gundo.com

--- a/documentation/content/en/articles/building-products/_index.adoc
+++ b/documentation/content/en/articles/building-products/_index.adoc
@@ -111,7 +111,7 @@ FreeBSD makes an excellent foundation on which to build products:
 * The project offers exceptional transparency into its workings, allowing organizations using its code to plan effectively for the future.
 * The culture of the FreeBSD project, carried over from the Computer Science
   Research Group at The University of California, Berkeley
-  crossref:building-products[McKu1999-1,"Why you should use a BSD style license for your Open Source Project"], fosters high-quality work. Some features in FreeBSD define the state of the art.
+  crossref:building-products[McKu1999-1,"Twenty Years of Berkeley Unix: From AT&T-Owned to Freely Redistributable"], fosters high-quality work. Some features in FreeBSD define the state of the art.
 
 crossref:building-products[GoldGab2005,"Innovation Happens Elsewhere: Open Source as Business Strategy"] examines the business reasons for using open-source in greater detail.
 For organizations, the benefits of using FreeBSD components in their products include a shorter time to market, lower development costs and lower development risks. 
@@ -163,7 +163,7 @@ FreeBSD's in-kernel Netgraph (man:netgraph[4]) framework allows kernel networkin
 +
 FreeBSD supports a number of filesystems, and its native UFS2 filesystem
 supports soft updates, snapshots and very large filesystem sizes (16TB per
-		filesystem) crossref:building-products[McKu1999,"Why you should use a BSD style license for your Open Source Project"].
+		filesystem) crossref:building-products[McKu1999,"Soft Updates: A Technique for Eliminating Most Synchronous Writes in the Fast Filesystem"].
 +
 FreeBSD's in-kernel GEOM (man:geom[4]) framework allows kernel storage modules to be composed in flexible ways.
 * Over {numports} ported applications, both commercial and open-source, managed via the FreeBSD ports collection.
