--- a/website/content/en/releng/_index.adoc
+++ b/website/content/en/releng/_index.adoc
@@ -33,6 +33,16 @@ General information about committing to -STABLE.
 |===
 |Date |Event |Information
 |December 2024 |FreeBSD 14.2 |link:../releases/14.2R/schedule/[Target Schedule]
+|March 2025 |FreeBSD 13.5 |
+|June 2025 |FreeBSD 14.3 |
+|December 2025 |FreeBSD 15.0 |
+|March 2026 |FreeBSD 14.4 |
+|June 2026 |FreeBSD 15.1 |
+|September 2026 |FreeBSD 14.5 |
+|December 2026 |FreeBSD 15.2 |
+|March 2027 |FreeBSD 14.6 |
+|June 2027 |FreeBSD 15.3 |
+|December 2027 |FreeBSD 16.0 |
 |===
 
 [[freeze]]
