--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -78,6 +78,16 @@ AWS / Annapurna Labs:
 * Graviton 2
 * Graviton 3
 
+NXP Semiconductors:
+
+* LS1028A SoC
+* LS1046A SoC
+* LS1088A SoC
+* LX2160A SoC
+* Conclusive Engineering WHLE-LS1
+* SolidRun HoneyComb LX2
+* Traverse Technologies Ten64
+
 Raspberry Pi, more info about the support at the link:https://wiki.freebsd.org/arm/Raspberry%20Pi[Raspberry Pi Wiki page]:
 
 * Raspberry Pi 3
@@ -88,6 +98,8 @@ RockChip (64-bit), more info about the support at the link:https://wiki.freebsd.
 * RK3328 SoC
 * RK3399 SoC
 * NanoPC-T4
+* NanoPi R2S
+* NanoPi R2S-Plus
 * NanoPi R4S
 * Radxa
 * Pinebook Pro
