--- a/website/content/en/status/report-2024-07-2024-09/pinephone.adoc
+++ b/website/content/en/status/report-2024-07-2024-09/pinephone.adoc
@@ -7,7 +7,8 @@ Contact: Toby Kurien <toby@tobykurien.com>
 
 A new project trying to make FreeBSD usable on the Pinephone Pro has been started during August.
 
-The current FreeBSD RELEASE images already boot on a Pinephone Pro, but no screen output or other devices are supported. The aim is to step by step support additional components so that the device one day might be usable as a highly mobile FreeBSD device.
+The current FreeBSD RELEASE images already boot on a Pinephone Pro, but no screen output or other devices are supported.
+The aim is to step by step support additional components so that the device one day might be usable as a highly mobile FreeBSD device.
 
 Over the last few weeks, the groundwork has been implemented like getting used to the device, cross-compiling and booting a 15.0-CURRENT custom kernel as well as toggling the LEDs (red/green/blue in the front). Also, the LCD backlight can be turned on already and the USB-C hub is enabled even though it is not yet functional due to missing power management support.
 
