--- a/website/content/en/status/report-2024-07-2024-09/pot.adoc
+++ b/website/content/en/status/report-2024-07-2024-09/pot.adoc
@@ -15,7 +15,8 @@ During this quarter, there were two bugfixes to link:https://github.com/bsdpot/p
 Potluck images saw some updates again.
 All images have been rebuilt again to include the latest fixes and quarterly packages. Additionally, some images like link:https://github.com/bsdpot/potluck/tree/master/loki[Loki] or link:https://github.com/bsdpot/potluck/tree/master/vault[Vault] have also received additional updates and bugfixes.
 
-Also, we have done some research regarding a potential future support of OCI, Buildah and Podman images in Potluck. Two blog posts, one describing link:https://honeyguide.eu/posts/build-own-containers-buildah-podman-freebsd/[a basic Buildah and Podman setup] and one link:https://honeyguide.eu/posts/micropod-blog-post/[describing how to orchestrate Podman containers with Nomad and Consul] have been published.
+Also, we have done some research regarding potential future support of OCI, Buildah and Podman images in Potluck.
+Two blog posts, one describing link:https://honeyguide.eu/posts/build-own-containers-buildah-podman-freebsd/[a basic Buildah and Podman setup] and one describing link:https://honeyguide.eu/posts/micropod-blog-post/[how to orchestrate Podman containers with Nomad and Consul] have been published.
 
 As always, feedback and patches are welcome.
 
