handbook: add warning about custom kernel configs
Inform users that custom kernel configs are less well tested, and they
should be prepared to participate in the investigation and remediation
of any failures.

Reviewed by:	imp, olce
Sponsored by:	The FreeBSD Foundation
Differential Revision: https://reviews.freebsd.org/D46875

--- a/documentation/content/en/books/handbook/kernelconfig/_index.adoc
+++ b/documentation/content/en/books/handbook/kernelconfig/_index.adoc
@@ -89,6 +89,13 @@ This has a number of benefits, such as:
 * Lower memory usage. A custom kernel often uses less memory than the [.filename]#GENERIC# kernel by omitting unused features and device drivers. This is important because the kernel code remains resident in physical memory at all times, preventing that memory from being used by applications. For this reason, a custom kernel is useful on a system with a small amount of RAM.
 * Additional hardware support. A custom kernel can add support for devices which are not present in the [.filename]#GENERIC# kernel.
 
+[WARNING]
+====
+When building a custom kernel, it is important to note that non-default configurations are less thoroughly tested than the GENERIC configuration.
+While customizing the kernel can provide specific benefits it also increases the risk of encountering build or runtime issues.
+Custom kernel configurations are recommended only for advanced users who have a specific reason for making changes and are willing to engage in the debugging process if necessary.
+====
+
 Before building a custom kernel, consider the reason for doing so.
 If there is a need for specific hardware support, it may already exist as a module.
 
