Status/2024Q3/wireless: typo fixes

--- a/website/content/en/status/report-2024-07-2024-09/wireless.adoc
+++ b/website/content/en/status/report-2024-07-2024-09/wireless.adoc
@@ -8,10 +8,10 @@ Contact: The FreeBSD wireless mailing list <wireless@FreeBSD.org>
 
 The ongoing wireless efforts are trying to bring more support for recent chipsets as well as newer standards.
 
-With man:iwlwifi[4] and man:rtw88[4] being supported we received patches and initial reports for rtw89 and ath10k working for some poeple.
+With man:iwlwifi[4] and man:rtw88[4] being supported we received patches and initial reports for rtw89 and ath10k working for some people.
 Additionally ath11k, ath12k and various chipsets supported by mt76 are waiting for someone to find the time to finish compat code, test and debug.
 
-Work is ongoing to update drivers to Linux v6.11 using the now bootstrapped vendor branches, which should help maintainance a lot in the future.
+Work is ongoing to update drivers to Linux v6.11 using the now bootstrapped vendor branches, which should help maintenance a lot in the future.
 One particular focus for this update is also to find ways to minimize incompatibilities between wireless compat code versions in order to support multiple Linux versions as needed.
 
 After the native kern_malloc changes got committed, LinuxKPI is seeing ongoing work for memory allocation to play better by the rules set out in Linux which should help with DMA problems seen.
