handbook: soften language around necessity of custom kernel configs
Commit b6ecd1fc99bf added a warning about the possibility of build- or
run-time failures when using a custom kernel config.

A custom kernel config is generally not _necessary_, but there are
reasons users may choose to use a custom config.  Reflect this in the
introductory text.

--- a/documentation/content/en/books/handbook/kernelconfig/_index.adoc
+++ b/documentation/content/en/books/handbook/kernelconfig/_index.adoc
@@ -53,7 +53,7 @@ endif::[]
 
 The kernel is the core of the FreeBSD operating system.
 It is responsible for managing memory, enforcing security controls, networking, disk access, and much more.
-While much of FreeBSD is dynamically configurable, it is still occasionally necessary to configure and compile a custom kernel.
+While much of FreeBSD is dynamically configurable, some users may wish to configure and compile a custom kernel.
 
 After reading this chapter, you will know:
 
