handbook: Apply bold markup to the word bold in typographic conventions

--- a/documentation/content/en/books/handbook/preface/_index.adoc
+++ b/documentation/content/en/books/handbook/preface/_index.adoc
@@ -259,7 +259,7 @@ An _italic_ font is used for filenames, URLs, emphasized text, and the first usa
 `Monospace`::
 A `monospaced` font is used for error messages, commands, environment variables, names of ports, hostnames, user names, group names, device names, variables, and code fragments.
 
-Bold::
+*Bold*::
 A *bold* font is used for applications, commands, and keys.
 
 [[preface-conv-commands]]
