--- a/documentation/content/en/books/handbook/desktop/_index.adoc
+++ b/documentation/content/en/books/handbook/desktop/_index.adoc
@@ -74,7 +74,7 @@ A desktop environment can range from a simple window manager to a complete suite
 
 | KDE Plasma
 | GPL 2.0 or later
-| x11/kde5
+| x11/kde
 
 | GNOME
 | GPL 2.0 or later
@@ -123,7 +123,7 @@ To install a minimal KDE Plasma execute:
 
 [source,shell]
 ....
-# pkg install plasma5-plasma
+# pkg install plasma6-plasma
 ....
 
 [TIP]
