--- a/documentation/content/en/books/handbook/virtualization/_index.adoc
+++ b/documentation/content/en/books/handbook/virtualization/_index.adoc
@@ -268,6 +268,10 @@ To run FreeBSD smoothly on VMWare, drivers should be installed:
 ....
 # pkg install xf86-video-vmware xf86-input-vmmouse open-vm-tools
 ....
+[NOTE]
+====
+The xf86 packages are only available for x86 FreeBSD guests.
+====
 
 [[virtualization-guest-virtualbox]]
 == FreeBSD as a Guest on VirtualBox(TM)
