handbook: Add procedure for fixing broken mouse support in vmware

--- a/documentation/content/en/books/handbook/virtualization/_index.adoc
+++ b/documentation/content/en/books/handbook/virtualization/_index.adoc
@@ -272,6 +272,16 @@ To run FreeBSD smoothly on VMWare, drivers should be installed:
 ====
 The xf86 packages are only available for x86 FreeBSD guests.
 ====
+[.procedure]
+. Enabling the mouse
++
+Some users have reported issues using the mouse in the virtual machine.
+The mouse may be enabled by appending the following to [.filename]#/boot/loader.conf#:
++
+[.programlisting]
+....
+# ums_load=“YES”
+....
 
 [[virtualization-guest-virtualbox]]
 == FreeBSD as a Guest on VirtualBox(TM)
