website: Remove EoL'd 14.0-RELEASE
14.0 was released on November 20, 2023 and EoL'd on September 30, 2024.

Sponsored by:	The FreeBSD Foundation

--- a/website/content/en/security/unsupported.adoc
+++ b/website/content/en/security/unsupported.adoc
@@ -61,4 +61,5 @@ The following releases are no longer supported but are listed here for reference
 |releng/13.0 |13.0-RELEASE |n/a |April 13, 2021 |August 31, 2022
 |releng/13.1 |13.1-RELEASE |n/a |May 16, 2022 |July 31, 2023
 |releng/13.2 |13.2-RELEASE |n/a |April 11, 2023 |June 30, 2024
+|releng/14.0 |14.0-RELEASE |n/a |November 20, 2023|September 30, 2024
 |===
