--- a/website/content/en/releases/_index.adoc
+++ b/website/content/en/releases/_index.adoc
@@ -35,7 +35,6 @@ Production:
 
 * *Release {rel133-current}* ({rel133-current-date}) _link:{u-rel133-announce}[Announcement] : link:{u-rel133-notes}[Release Notes] : link:{u-rel133-installation}[Installation Instructions] : link:{u-rel133-hardware}[Hardware Compatibility List] : link:{u-rel133-readme}[Readme] : link:{u-rel133-errata}[Errata] : link:{u-rel133-signatures}[Signed Checksums]_
 * *Release {rel134-current}* ({rel134-current-date}) _link:{u-rel134-announce}[Announcement] : link:{u-rel134-notes}[Release Notes] : link:{u-rel134-installation}[Installation Instructions] : link:{u-rel134-hardware}[Hardware Compatibility List] : link:{u-rel134-readme}[Readme] : link:{u-rel134-errata}[Errata] : link:{u-rel134-signatures}[Signed Checksums]_
-* *Release {rel140-current}* ({rel140-current-date}) _link:{u-rel140-announce}[Announcement] : link:{u-rel140-notes}[Release Notes] : link:{u-rel140-installation}[Installation Instructions] : link:{u-rel140-hardware}[Hardware Compatibility List] : link:{u-rel140-readme}[Readme] : link:{u-rel140-errata}[Errata] : link:{u-rel140-signatures}[Signed Checksums]_
 * *Release {rel141-current}* ({rel141-current-date}) _link:{u-rel141-announce}[Announcement] : link:{u-rel141-notes}[Release Notes] : link:{u-rel141-installation}[Installation Instructions] : link:{u-rel141-hardware}[Hardware Compatibility List] : link:{u-rel141-readme}[Readme] : link:{u-rel141-errata}[Errata] : link:{u-rel141-signatures}[Signed Checksums]_
 
 ////
@@ -56,6 +55,7 @@ The latest snapshots from our link:{handbook}cutting-edge/#stable[FreeBSD-STABLE
 
 For historical information about branches, release dates, types, and EOL dates, see link:../security/unsupported/[Unsupported Releases].
 
+* *14.0* ({rel140-current-date}) _link:{u-rel140-announce}[Announcement] : link:{u-rel140-notes}[Release Notes] : link:{u-rel140-installation}[Installation Instructions] : link:{u-rel140-hardware}[Hardware Compatibility List] : link:{u-rel140-readme}[Readme] : link:{u-rel140-errata}[Errata] : link:{u-rel140-signatures}[Signed Checksums]_
 * *13.2* ({rel132-current-date}) _link:{u-rel132-announce}[Announcement] : link:{u-rel132-notes}[Release Notes] : link:{u-rel132-installation}[Installation Instructions] : link:{u-rel132-hardware}[Hardware Compatibility List] : link:{u-rel132-readme}[Readme] : link:{u-rel132-errata}[Errata] : link:{u-rel132-signatures}[Signed Checksums]_
 * *13.1* ({rel131-current-date}) _link:{u-rel131-announce}[Announcement] : link:{u-rel131-notes}[Release Notes] : link:{u-rel131-installation}[Installation Instructions] : link:{u-rel131-hardware}[Hardware Compatibility List] : link:{u-rel131-readme}[Readme] : link:{u-rel131-errata}[Errata] : link:{u-rel131-signatures}[Signed Checksums]_
 * *{rel130-current}* ({rel130-current-date}) _link:{u-rel130-announce}[Announcement] : link:{u-rel130-notes}[Release Notes] : link:{u-rel130-installation}[Installation Instructions] : link:{u-rel130-hardware}[Hardware Compatibility List] : link:{u-rel130-readme}[Readme] : link:{u-rel130-errata}[Errata] : link:{u-rel130-signatures}[Signed Checksums]_
