Mark 13.[34] consistently as "legacy" releases
While the front page of the FreeBSD website marked these are legacy
releases, the /where/ and /releases/ did not, resulting in confusion
from new users about which FreeBSD release they should download.

With hat:	re
Reported by:	Graham Perrin
Sponsored by:	Amazon

--- a/website/content/en/releases/_index.adoc
+++ b/website/content/en/releases/_index.adoc
@@ -10,16 +10,11 @@ include::shared/en/urls.adoc[]
 
 [.right]
 image:../gifs/releases.jpg[FreeBSD Releases,width=300,height=200]
-////
-// <https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=266094#c2>
 
-FreeBSD releases are classified into _Production Releases_ and _Legacy Releases_. Production releases are best suited to users looking for the latest new features. Legacy releases are for users wishing to stay with a more conservative upgrade strategy.
-////
-////
-// <https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=266094#c2>
+FreeBSD releases are classified into _Production Releases_ and _Legacy Releases_.
+For most users, production releases will be most suitable.
+Legacy releases are provided for existing users wishing to stay with a more conservative upgrade strategy.
 
-Documentation files for each release are at link:../relnotes/[Release Documentation].
-////
 [[supported-releases]]
 == Currently Supported
 
@@ -28,20 +23,14 @@ For information about branches, release dates, and estimated end-of-life (EOL) d
 [[current]]
 == Most Recent
 
-////
 === Production Releases
-////
-Production:
+
+* *Release {rel141-current}* ({rel141-current-date}) _link:{u-rel141-announce}[Announcement] : link:{u-rel141-notes}[Release Notes] : link:{u-rel141-installation}[Installation Instructions] : link:{u-rel141-hardware}[Hardware Compatibility List] : link:{u-rel141-readme}[Readme] : link:{u-rel141-errata}[Errata] : link:{u-rel141-signatures}[Signed Checksums]_
+
+=== Legacy
 
 * *Release {rel133-current}* ({rel133-current-date}) _link:{u-rel133-announce}[Announcement] : link:{u-rel133-notes}[Release Notes] : link:{u-rel133-installation}[Installation Instructions] : link:{u-rel133-hardware}[Hardware Compatibility List] : link:{u-rel133-readme}[Readme] : link:{u-rel133-errata}[Errata] : link:{u-rel133-signatures}[Signed Checksums]_
 * *Release {rel134-current}* ({rel134-current-date}) _link:{u-rel134-announce}[Announcement] : link:{u-rel134-notes}[Release Notes] : link:{u-rel134-installation}[Installation Instructions] : link:{u-rel134-hardware}[Hardware Compatibility List] : link:{u-rel134-readme}[Readme] : link:{u-rel134-errata}[Errata] : link:{u-rel134-signatures}[Signed Checksums]_
-* *Release {rel141-current}* ({rel141-current-date}) _link:{u-rel141-announce}[Announcement] : link:{u-rel141-notes}[Release Notes] : link:{u-rel141-installation}[Installation Instructions] : link:{u-rel141-hardware}[Hardware Compatibility List] : link:{u-rel141-readme}[Readme] : link:{u-rel141-errata}[Errata] : link:{u-rel141-signatures}[Signed Checksums]_
-
-////
-=== Legacy
-
-*Release {rel112-current}* ({rel112-current-date}) _link:{u-rel112-announce}[Announcement] : link:{u-rel112-notes}[Release Notes] : link:{u-rel112-installation}[Installation Instructions] : link:{u-rel112-hardware}[Hardware Notes] : link:{u-rel112-readme}[Readme] : link:{u-rel112-errata}[Errata] : link:{u-rel112-signatures}[Checksums]_
-////
 
 [[future]]
 == Future
