--- a/website/content/en/where.adoc
+++ b/website/content/en/where.adoc
@@ -37,7 +37,7 @@ For embedded platforms: SD card images are available.
 [[download]]
 == Production Quality
 
-`RELEASE` versions of FreeBSD are the end result of _release engineering_.
+`RELEASE` versions of FreeBSD are the end result of _release engineering_ and are recommended for most users.
 
 [[download-rel141]]
 === FreeBSD {rel141-current}-RELEASE
@@ -92,6 +92,10 @@ a|
 * link:{u-rel141-signatures}[Signed Checksums]
 
 |===
+
+== Production Quality (legacy)
+
+Some FreeBSD `RELEASEs` are supported but are older or built from older `STABLE` branches; these are considered "legacy" and are probably only of interest to people maintaining existing systems on FreeBSD.
 
 [[download-rel134]]
 === FreeBSD {rel134-current}-RELEASE
