Status/2024Q4/fuse-ufs: Consistency
The rest of the report references people by first name and last name, so
replace occurrence of FreeBSD alias.

--- a/website/content/en/status/report-2024-07-2024-09/fuse-ufs.adoc
+++ b/website/content/en/status/report-2024-07-2024-09/fuse-ufs.adoc
@@ -19,7 +19,7 @@ Once the big refactor is done, I will start concentrating on implementing write 
 Thanks to being bribed by mailto:fuz@FreeBSD.org[Robert Clausecker], I will also add soft-updates and mounting Sun's UFS in the future.
 
 The driver can be installed using `cargo install fuse-ufs`, or (if on Arch Linux) using your favorite AUR helper.
-Thanks to fuz@ a port for FreeBSD exists in package:sysutils/fusefs-ufs[].
+Thanks to Robert Clausecker a port for FreeBSD exists in package:sysutils/fusefs-ufs[].
 
 A big thanks to mailto:asomers@FreeBSD.org[Alan Somers] and mailto:mckusick@FreeBSD.org[Kirk McKusick] for mentoring me and thanks to Robert Clausecker for the FreeBSD port and suggesting this GSoC project to me in the first place.
 Another thanks to Davids Paskevics for writing a fuzzer for me.
