handbook: Clarification, portsmaster upgrades applications from ports
Reviewed by:	Pau Amma <pauamma@gundo.com>, dbaio
Pull Request:	https://github.com/freebsd/freebsd-doc/pull/426

Co-authored-by: Pau Amma <pauamma@gundo.com>

--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -451,7 +451,7 @@ The forced upgrade can be accomplished by performing:
 # pkg-static upgrade -f
 ....
 
-A rebuild of all installed applications can be accomplished with this command:
+A rebuild of all applications installed from the ports collection can be accomplished with this command:
 
 [source,shell]
 ....
