Clarification, portsmaster upgrades applications from ports

--- a/documentation/content/en/books/handbook/cutting-edge/_index.po
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.po
@@ -823,8 +823,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/cutting-edge/_index.adoc:455
 msgid ""
-"A rebuild of all installed applications can be accomplished with this "
-"command:"
+"A rebuild of all applications installed from ports collection can be "
+"accomplished with this command:"
 msgstr ""
 
 #. type: delimited block . 4
