articles/committers-guide: Document "Discussed with"
Reported by:	markj
Reviewed by:	imp, markj
Differential Revision:	https://reviews.freebsd.org/D47059

--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -2579,6 +2579,10 @@ Reviewed by: Full Name <valid@email> (maintainer)
 |`Tested by:`
 |The name and e-mail address of the person or people that tested the change; for developers, just the username on the FreeBSD cluster.
 
+|`Discussed with:`
+|The name and e-mail address of the person or people that contributed to the patch by providing meaningful feedback; for developers, just the username on the FreeBSD cluster.
+Typically used to credit those who did not explicitly review, test, or approve the change, but nevertheless contributed to the discussion surrounding the change, which led to improvements and a better understanding of its impact on the FreeBSD project.
+
 |`Approved by:`
 a|
 
