--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -570,6 +570,8 @@ Marvell 88W8363 IEEE 802.11n wireless network adapters (man:mwl[4] driver)
 
 &hwlist.rtw88;
 
+&hwlist.rtw89;
+
 Realtek RTL8192C, RTL8188E, RTL8812A and RTL8821A based PCIe IEEE 802.11b/g/n wireless network adapters (man:rtwn[4] driver)
 
 &hwlist.rum;
