Fix sysrc examples
When using sysrc, adding the quotes is not needed as that is what the
tool takes care of. Also, remove the spaces around the cuse module as
that is not proper syntax.

--- a/documentation/content/en/books/handbook/multimedia/_index.adoc
+++ b/documentation/content/en/books/handbook/multimedia/_index.adoc
@@ -482,7 +482,7 @@ Enable the man:webcamd[8] service in `/etc/rc.conf` to start it at system boot:
 
 [source,shell]
 ....
-# sysrc webcamd_enable="YES"
+# sysrc webcamd_enable=YES
 ....
 
 The user must belong to the `webcamd` group.
@@ -504,7 +504,7 @@ To load man:cuse[3] at system boot, execute the command:
 
 [source,shell]
 ....
-# sysrc kld_list += "cuse"
+# sysrc kld_list+=cuse
 ....
 
 Once the utilities have been installed the list of available webcams can be shown with man:webcamd[8]:
@@ -737,7 +737,7 @@ To activate the service and have it run at boot execute the following command:
 
 [source,shell]
 ....
-# sysrc saned_enable="YES"
+# sysrc saned_enable=YES
 ....
 
 While man:scanimage[1] can be used to perform an image acquisition from the command line, it is often preferable to use a graphical interface to perform image scanning.
