[hb][linuxemu]: Fix typo in package name
PR:		281837
Reported by:	grahamperrin@gmail.com

--- a/documentation/content/en/books/handbook/linuxemu/_index.adoc
+++ b/documentation/content/en/books/handbook/linuxemu/_index.adoc
@@ -135,7 +135,7 @@ To install the Rocky Linux 9 userland execute the following command:
 # pkg install linux_base-rl9
 ....
 
-package:emulators/linux_rl9[] will place the base system derived from Rocky Linux 9 into [.filename]#/compat/linux#.
+package:emulators/linux_base-rl9[] will place the base system derived from Rocky Linux 9 into [.filename]#/compat/linux#.
 
 After installing the package, the contents of [.filename]#/compat/linux# can be verified by running the following command to check that the Rocky Linux userland has been installed:
 
