committers-guide: Update SPDX links
Reviewed by:	Alexander Ziaee <concussious@runbox.com>, dbaio
Pull Request:	https://github.com/freebsd/freebsd-doc/pull/428

--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -2849,8 +2849,8 @@ At present, these tags are indented to help automated tools reconstruct license 
 All _SPDX-License-Identifier_ tags in the tree should be considered to be informative.
 All files in the FreeBSD source tree with these tags also have a copy of the license which governs use of that file.
 In the event of a discrepancy, the verbatim license is controlling.
-The project tries to follow the https://spdx.github.io/spdx-spec/[SPDX Specification, Version 2.2].
-How to mark source files and valid algebraic expressions are found in https://spdx.github.io/spdx-spec/appendix-IV-SPDX-license-expressions/[Appendix IV] and https://spdx.github.io/spdx-spec/appendix-V-using-SPDX-short-identifiers-in-source-files/[Appendix V].
+The project tries to follow the https://spdx.github.io/spdx-spec/v2.2.2/[SPDX Specification, Version 2.2].
+How to mark source files and valid algebraic expressions are found in https://spdx.github.io/spdx-spec/v2.2.2/SPDX-license-expressions/[Annex D] and https://spdx.github.io/spdx-spec/v2.2.2/using-SPDX-short-identifiers-in-source-files/[Annex E].
 The project draws identifiers from SPDX's list of valid https://spdx.org/licenses/[short license identifiers].
 The project uses only the _SPDX-License-Identifier_ tag.
 
